# dem

./: .env.example  .env.minimal.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  targets.example.yml
agent/: Dockerfile  entrypoint.sh  seed-claude.json
conductor/: Dockerfile  alembic.ini  pyproject.toml
conductor/migrations/: env.py
conductor/migrations/versions/: 22f2c570f81f_plane_mappings.py  8c03955898af_multi_repo_mappings.py  9ff29322a03f_users.py  a1b2c3d4e5f6_job_dedupe_key.py  a6b7c8d9e0f1_ticket_planner_fields.py  b2c3d4e5f6a7_job_active_dedupe_unique.py  b7c8d9e0f1a2_agent_runs.py  bf64e81c963c_config_store.py  c3d4e5f6a7b8_job_raw_payloads.py  c8d9e0f1a2b3_agent_prompts.py  d4e5f6a7b8c9_repo_icon.py  d5e6f7a8b9c0_agent_run_status.py  e5f6a7b8c9d0_project_icon.py  e6f7a8b9c0d1_job_events.py  f4ff4cd58b95_initial_jobs_and_tickets.py  f7a8b9c0d1e2_ticket_prs.py
conductor/src/conductor/: __init__.py  agent_runs.py  auth.py  catalog.py  config.py  crypto.py  db.py  github.py  job_events.py  jobs.py  localtime.py  main.py  mappings.py  models.py  notify.py  plane.py  poller.py  prompts.py  router.py  scheduler.py  store.py  targets.py  telemetry.py  tickets.py  verify.py
conductor/src/conductor/agents/: contracts.py  dispatcher.py  dockerctl.py  roles.py  volumes.py
conductor/src/conductor/api/: auth.py  config.py  mappings.py  webhooks.py
conductor/src/conductor/prompts/: engineer.md  engineer_followup.md  engineer_resume.md  planner.md  qa.md  reviewer.md
conductor/src/conductor/ui/: __init__.py  auth.py  context.py  icons_catalog.py  kit.py  pages.py  shell.py  views.py  widgets.py  wizard.py
console/: Dockerfile  pyproject.toml
console/src/console/: api_client.py  app.py
console/src/console/views/: auth.py  config.py  fields.py  projects.py  states.py  wizard.py
console/tests/: conftest.py  test_api_client.py
docs/: HANDOFF.md  PLAN.md  SETUP_GITHUB.md  UI_DESIGN.md
scripts/: agent-smoke.sh  bump_version.py
tests/: agents_fakes.py  (+29 more)
(+2 files in other folders)
