[project]
name = "console"
version = "0.1.0"
description = "Streamlit admin console for the DEM conductor (thin client over its management API)"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/console"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true
